[shared-state] - Use context to have shared data.

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@
 
 button {
   margin-bottom: 20px;
+  background: white;
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1px;
